sdk_tests/tests/read-write-macro-fail/state_enum_missing_a_single_discriminant.stderr
error: proc-macro derive panicked
 --> tests/read-write-macro-fail/state_enum_missing_a_single_discriminant.rs:4:10
  |
4 | #[derive(ReadWriteState)]
  |          ^^^^^^^^^^^^^^
  |
  = help: message: PBC serialization derives only supports explicitly discriminated C-style enums and enums consisting of struct variants
